# i3cruntime

Documentation/: protocol.txt
i3cmaster/: CMakeLists.txt  connection.cpp  connection.h  example.cfg  example1.cpp  i2cmaster.cfg  i2cmethods.h  packets.cfg  server-example.cpp  server.cpp  server.h
i3cmaster/master/: i2cconfig.cpp  i2cconfig.h  i2cmaster.cpp  i3c_commhandler.h  i3ccommstatemachine.cpp  i3ccommstatemachine.h  i3cendpoint.cpp  i3cendpoint.h  i3cendpointbroker.h  i3cpacket.cpp  i3cpacket.h  operation.cpp  operation.h
i3cmaster/platform/dummy/: i2cendpoint_dummy.cpp  i2cendpoint_dummy.h
i3cmaster/platform/rpi/: wiringpii2cendpoint.cpp  wiringpii2cendpoint.h  wiringpii2cendpointbroker.cpp  wiringpii2cendpointbroker.h
i3cmaster/sys/i2c/: i2caddress.cpp  i2caddress.h  i2cdispatcher.cpp  i2cdispatcher.h  i2cendpoint.cpp  i2cendpoint.h  i2cendpointbroker.cpp  i2cendpointbroker.h  i2cendpointexception.cpp  i2cendpointexception.h  i2cpacket.cpp  i2cpacket.h
